# usbbootgui

./: Makecache  Makefile.am  README.md  config.h.in  configure.ac
data/: Makefile.am  usbbootgui.ui
debian/: 99-usbbootgui.rules  changelog  control  copyright  install  postinst  postrm  rules  usbbootgui.lintian-overrides  usbbootgui.service
gpioexpander/: README.md
gpioexpander/output/: LICENSE  config.txt  gpioexpand.img  kernel.img
po/: .pot
src/: Makefile.am  control  stealcookie.c  stealcookie.h  usbbootgui.c
usbboot/: Makefile.am
